IR+ changes 2.1 to 3.0
==============================
- Updated rename file - now re-indexes after name change
- Simplified move personal folder and files code
- Updated Approve affiliations - removed unneeded variables and imports
- added last login date to user search results table 
- updated to allow filtering by role and affiliation in user administration
- Updated to allow administrators to view invite table
   - allows administrators to delete an invite
   - allows administrators to see list of named files shared
- Updated to Lucene version 3.5
- Updated to Struts 2.3.1.1
- Updated to load user id when going to approve user affiliations - fixes menu bar
- Updated to YUI 2.9.0 
- Updated to PDF box 1.6.0
- Updated to POI 3.7 
- Updated to ivy 2.2.0
- Updated to hibernate 3.6.0 Final
- Added updated date to invite info
- Added indexing capabilities for collections
- Added indexing capabilities for user groups
- Changed upload files to return access denied rather than files not uploaded for non-authoring users.
- Updated to Spring 3.1.0
- Updated to re-index all items within a collection tree if a new collection is added
- Updated email to have a new column - lower case email to allow comparison by the lower case email
  address
- Updated file properties page to show emails that are shared with but users have not yet created an account
- fixed to make back button work in personal files/folders workspace
- Updated home page to set focus on search box
- Updated Search / Browse page to set focus on search box
- Added search interface to institutional collection admin section
- Added job to allow administrators option to re-index all institutional collections
- Updated collection page to show description of sub collections
- Updated collections indexing to occur on new collection creation or updating of collection
- Added Group workspaces admin option in administration drop down
- Added setting to make system property headless = true for graphics processing